@@ -1,7 +1,7 @@
 package com.hope.api_hope.service;
 
 import com.hope.api_hope.dto.UserDTO;
-import com.hope.api_hope.dto.OngDTO;
+import com.hope.api_hope.mapper.NonProfitsCampaignMapper.UserMapper;
 import com.hope.api_hope.model.User;
 import com.hope.api_hope.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,19 +18,18 @@ public class UserService {
     private UserRepository userRepository;
 
     public List<UserDTO> getAllUsers(){
-        return userRepository
-                .findAll()
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        List<UserDTO> users = userRepository.findAll().stream().map(UserMapper::toUserDTO).toList();
+
+
+        return users;
     }
 
-    public UserDTO getUserById(int id){
+    public UserDTO getUserById(Long id){
         Optional<User> user = userRepository.findById(id);
         return user.map(this::convertToDTO).orElse(null);
     }
 
-    public UserDTO getUserOngById(int id){
+    public UserDTO getUserOngById(Long id){
         Optional<User> user = userRepository.findById(id);
         return user.map(this::convertToDTO).orElse(null);
     }
@@ -39,8 +38,8 @@ public class UserService {
         User user = new User();
         user.setNameUser(userDTO.getNameUser());
         user.setPhotoUser(userDTO.getPhotoUser());
-        user.setEmailUser(userDTO.getEmailUser());
-        user.setPasswordUser(userDTO.getPasswordUser());
+        user.setEmail(userDTO.getEmailUser());
+        user.setPassword(userDTO.getPasswordUser());
         user.setAddressUser(userDTO.getAddressUser());
         userRepository.save(user);
 
@@ -48,33 +47,32 @@ public class UserService {
     }
 
 
-    public UserDTO updateUser(int id, UserDTO userDTO){
+    public UserDTO updateUser(Long id, UserDTO userDTO){
         Optional<User> userOptional = userRepository.findById(id);
         if(userOptional.isPresent()){
             User user = userOptional.get();
             user.setNameUser(userDTO.getNameUser());
             user.setPhotoUser(userDTO.getPhotoUser());
-            user.setEmailUser(userDTO.getEmailUser());
-            user.setPasswordUser(userDTO.getPasswordUser());
+            user.setEmail(userDTO.getEmailUser());
+            user.setPassword(userDTO.getPasswordUser());
             user.setAddressUser(userDTO.getAddressUser());
-            user.setThemeUser(user.getThemeUser());
             userRepository.save(user);
             return convertToDTO(user);
         }
         return null;
     }
 
-    public void deleteUser(int id){
+    public void deleteUser(Long id){
         userRepository.deleteById(id);
     }
 
     private UserDTO convertToDTO(User user){
         UserDTO userDTO = new UserDTO();
-        userDTO.setIdUser(user.getIdUser());
+        userDTO.setIdUser(user.getId());
         user.setNameUser(userDTO.getNameUser());
         user.setPhotoUser(userDTO.getPhotoUser());
-        user.setEmailUser(userDTO.getEmailUser());
-        user.setPasswordUser(userDTO.getPasswordUser());
+        user.setEmail(userDTO.getEmailUser());
+        user.setPassword(userDTO.getPasswordUser());
         user.setAddressUser(userDTO.getAddressUser());
 
         return userDTO;
